Updated reading log with explanation of hours

--- a/readinglog.html
+++ b/readinglog.html
@@ -28,6 +28,8 @@
     <div style="outline: 0.1em solid black; margin: 1em; overflow: auto;">
       <h2>Reading Goals</h2>
 
+      <!-- Comment on the meaning per hour -->
+      <p style="font-size: 12px;">Reading time is dependent on difficulty: Easy = 50 pages per hour, Medium = 40 pages per hour, and Hard = 30 pages per hour</p>
       <table style="margin-bottom: 1em">
         <tr>
           <td style="width: 550px; text-align: left; font-weight: bold">
